<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".ui.AddFragment">

    <TextView
        android:id="@+id/result"
        tools:text="0"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/num1"
        android:textSize="22sp"
        android:hint="num1"
        android:layout_marginTop="40dp"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/num2"
        android:textSize="22sp"
        android:hint="num1"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_plus"
        android:text="plus"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>